<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dan.budgetapp.MainActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:id="@+id/category"
        android:hint="@string/category"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/description"
        android:layout_below="@id/category"
        android:hint="@string/description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/cost"
        android:layout_below="@id/description"
        android:hint="@string/cost"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addButton"
        android:layout_below="@id/cost"
        android:layout_toEndOf="@id/fakeView2"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/refreshButton"
        android:layout_below="@id/cost"
        android:layout_toStartOf="@id/fakeView2"
        android:layout_marginTop="5dp"/>

    <View android:id="@+id/fakeView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/cost"
        android:layout_centerInParent="true"/>


    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/addButton"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/viewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/fakeView"
        android:layout_below="@+id/addButton"
        android:text="@string/viewCategories"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewFixed"
        android:id="@+id/viewFixed"
        android:layout_below="@id/addButton"
        android:layout_toEndOf="@id/fakeView"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewFixed"
        android:layout_centerHorizontal="true"
        android:id="@+id/total"
        android:layout_marginTop="5sp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        android:id="@+id/scrollView2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display"
            android:layout_marginTop="20sp"/>
        </ScrollView>



</RelativeLayout>
