<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dan.budgetapp.Fixed">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/Name"
        android:hint="@string/fixed_entry_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cost"
        android:layout_below="@id/Name"
        android:hint="@string/cost"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/datetime"
        android:layout_below="@id/cost"
        android:hint="@string/date_time2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixed_entry"
        android:id="@+id/addButtonFixed"
        android:layout_below="@id/datetime"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addButtonFixed"
        android:id="@+id/scrollView3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display"
            android:layout_marginTop="20sp"/>
    </ScrollView>


</RelativeLayout>
