<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dan.budgetapp.CategoryList">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/Name"
        android:hint="@string/category_name"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Name"
        android:hint="@string/description" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/addCategory"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:text="@string/add_category"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCategory"
        android:id="@+id/scrollViewCategories">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/displayCategories"
            android:layout_marginTop="20sp"/>
    </ScrollView>

</RelativeLayout>
